--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -3,7 +3,9 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 .social-btn {
-    background: red;
-    color: yellow;
-    left: 200px;
+    position: relative;
+    left: 90%;
+    background: #fafac6;
+    color: #03254B;
+    width: 100px;
 }
