--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -8,4 +8,10 @@
     background: #fafac6;
     color: #03254B;
     width: 100px;
+    border-radius: 3px;
+}
+
+.social-btn:hover {
+    background: #9CE37D;
+    
 }
