--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -2,4 +2,4 @@
 
 <p>Find me in app/views/welcome/about.html.erb</p>
 
-<button class="social-btn"><%= link_to "Follow me", "www.linkedin.com/in/corey-dekker-39139141" %></button>
+<button class="social-btn"><a href="https://www.linkedin.com/in/corey-dekker-39139141">Follow me</a></button>
