--- a/app/views/advertisements/new.html.erb
+++ b/app/views/advertisements/new.html.erb
@@ -12,7 +12,7 @@
     </div>
     <div class="form-group">
       <%= f.label :price %>
-      <%= f.text_area :price, rows: 8, class: 'form-control', placeholder: "Enter advertisement body" %>
+      <%= f.text_area :price, class: 'form-control', placeholder: 100 %>
     </div>
     <div class="form-group">
       <%= f.submit "Save", class: 'btn btn-success' %>
