--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -1,2 +1,11 @@
 <h1>Questions</h1>
-<p>Find me in app/views/questions/index.html.erb</p>
+
+<% @questions.each do |question| %>
+    <div class="media">
+        <div class="media-body">
+            <h4 class="media-heading">
+                <%= link_to question.title, question %>
+            </h4>
+        </div>
+    </div>
+<% end %>
