--- a/app/views/topics/_form.html.erb
+++ b/app/views/topics/_form.html.erb
@@ -17,7 +17,10 @@
         <%= f.label :description %>
         <%= f.text_area :description, rows: 8, class: 'form-control', placeholder: "Enter description body" %>
     <% end %>
-    <div class="form-group">
-        <%= f.submit "Save", class: 'btn btn-success' %>
-    </div>
+    <!--<div class="form-group">-->
+    <!--    <%= f.label :public, class: 'checkbox' do %>-->
+    <!--        <%= f.check_box :public %> Public Topic-->
+    <!--    <% end %>-->
+    <!--</div>-->
+    <%= f.submit "Save", class: 'btn btn-success' %>
 <% end %>
