--- a/app/views/topics/new.html.erb
+++ b/app/views/topics/new.html.erb
@@ -9,6 +9,11 @@
             <li>Smile when you type.</li>
         </ul>
     </div>
+    <div class="form-group">
+        <%= f.label :public, class: 'checkbox' do %>
+            <%= f.check_box :public %> Public Topic
+        <% end %>
+    </div>
     <div class="col-md-8">
         <%= render partial: 'form', locals: { topic: @topic } %>
     </div>
