--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -10,7 +10,7 @@
           <ul>
             <% @user.errors.full_messages.each do |msg| %>
               <li><%= msg %></li>
-            <% end %>
+            <% end %>git 
           </ul>
         </div>
       <% end %>
