--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -11,6 +11,7 @@
   <div class="col-md-8">
       <p class="lead"><%= @topic.description %></p>
       <% @topic.posts.each do |post| %>
+        <%= render partial: 'votes/voting', locals: { post: post } %>
         <%= render partial: 'posts/post', locals: { post: post } %>
       <% end %>
       <% @topic.sponsored_posts.each do |post| %>
